--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="lavender">#5264FA</color>
     <color name="back_lin">#F0F0F1</color>
     <color name="Red">#E10431</color>
-    <color name="gry">#787777</color>
+    <color name="gry">#ACA9A9</color>
     <color name="blue">#2525FA</color>
     <color name="gry_faible">#F1F0F0</color>
 </resources>
