--- a/app/src/main/res/layout/activity_page_home.xml
+++ b/app/src/main/res/layout/activity_page_home.xml
@@ -16,10 +16,27 @@
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="90dp"
+            android:src="@drawable/logo_img"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="portfolio developper"
+            android:layout_marginTop="20dp"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            android:textStyle="italic"
+            android:textColor="@color/bleu"/>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="9dp"
-        android:layout_marginTop="25dp"/>
+        android:padding="9dp" />
 </LinearLayout>
